<resources>
    <string name="app_name">Login</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="password_hint">密码</string>
    <string name="count">账户</string>
    <string name="YZM">验证码</string>
    <string name="getYZM">获取验证码</string>
    <string name="person">个人中心</string>
    <string name="course">课程</string>
    <string name="course_details">课程详情</string>
    <string name="myself">我</string>
    <string name="MIDI">乐器</string>
    <string name="cdohng">昵称Cdohng</string>
    <string name="_15664821687">手机：15664821687</string>
    <string name="kc_x">课程XXXXXXXX</string>
    <string name="already">已开通</string>
    <string name="a">难度等级：A</string>
    <string name="ls_xxx">老师：XXX</string>
    <string name="xx_xx_xx">XX区XX大厦XX楼</string>
    <string name="schooltime">设置上课时间</string>
    <string name="monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="wensday">周三</string>
    <string name="thirsday">周四</string>
    <string name="Friady">周五</string>
    <string name="satday">周六</string>
    <string name="sunday">周日</string>
    <string name="busy">忙碌</string>
    <string name="acceptschool">接受安排上课</string>
    <string name="reject">拒绝安排课程</string>
    <string name="yq_radio_all">全部</string>
    <string name="yq_radio_kind1">分类1</string>
    <string name="yq_radio_kind2">分类2</string>
    <string name="yq_radio_kind3">分类3</string>
    <string name="yq_radio_kind4">分类4</string>
    <string name="nameofmidi">乐器名称乐器名称</string>
    <string name="yq_ms">音质优美 配件齐全 手工实木 音质优美 配件齐全 手工实木 音质优美 配件齐全 手工实木</string>
    <string name="price_15">¥ 15.00</string>
    <string name="re_price">30.00</string>
    <string name="yq_money_sign">¥</string>
    <string name="yq_price">318.00</string>
    <string name="title_activity_courses_details">CoursesDetails</string>
    <string name="kcxq_price">&#160;&#160;5000.00</string>
    <string name="Num">编号</string>
    <string name="classtime">课时</string>
    <string name="teacher">老师</string>
    <string name="donetime">完成时间</string>
    <string name="place">地点</string>
    <string name="kcxq_bz">备注</string>
    <string name="kcxq_name">课程名称XXXXX</string>
    <string name="leavel_A">等级：A</string>
    <string name="place_xx">地点：XXXXXX</string>
    <string name="kcxq_bz_xx">备注：XXXXXX</string>
    <string name="kc_course">课程</string>
    <string name="kc_midi">乐器</string>
    <string name="sea_yydd">预约订单</string>
    <string name="sea_jyjl">交易记录</string>
    <string name="sea_yq_sx">XXX属性</string>
    <string name="logistics_details">物流详情</string>
    <string name="sea_search">搜索</string>
</resources>
