<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginLeft="11dp"
        android:id="@+id/grid_imv"
        android:layout_width="@dimen/dp172"
        android:layout_height="@dimen/dp172" />

    <TextView
        android:layout_marginLeft="@dimen/dp11"
        android:id="@+id/grid_name_yq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/nameofmidi"
        android:textColor="@color/yq_name"
        android:textSize="@dimen/sp14" />

    <LinearLayout
        android:layout_marginLeft="@dimen/dp11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grid_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/price_15"
            android:textColor="@color/yq_name"
            android:textSize="@dimen/sp15" />
        <TextView
            android:id="@+id/grid_re_price"
            android:text="@string/re_price"
            android:textColor="#cccccc"
            android:textSize="11sp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>