<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.wqj.com.login.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <EditText
            android:id="@+id/re_account"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignEnd="@+id/editText2"
            android:layout_alignLeft="@+id/re_login"
            android:layout_alignRight="@+id/editText2"
            android:layout_alignStart="@+id/re_login"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:hint="@string/count"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="230dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/re_account"
           android:layout_marginStart="@dimen/dp12"
            android:layout_marginTop="6dp"
            android:background="@drawable/textview_unfocused" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_login"
            android:layout_marginStart="@dimen/dp12"
            android:layout_marginTop="46dp"
            android:src="@drawable/login_username"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/login_password"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="230dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageView2"
            android:layout_marginStart="@dimen/dp12"
            android:layout_marginTop="6dp"
            android:background="@drawable/textview_unfocused" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv2"
            android:layout_alignEnd="@+id/tv2"
            android:layout_alignRight="@+id/tv2"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edittext_shape"
            app:srcCompat="@drawable/login_view"
            tools:ignore="ContentDescription" />


        <Button
            android:id="@+id/re_reg"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignBottom="@id/re_login"
            android:layout_alignEnd="@+id/re_account"
            android:layout_alignRight="@+id/re_account"
            android:layout_alignTop="@+id/re_login"
            android:background="@drawable/shape_select"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="19sp" />

        <Button
            android:id="@+id/re_login"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:background="@drawable/selector"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_above="@+id/tv2"
            android:layout_alignBottom="@id/imageView2"
            android:layout_alignLeft="@+id/re_login"
            android:layout_alignStart="@+id/re_login"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/imageButton"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/re_yzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv2"
            android:layout_alignStart="@+id/tv2"
            android:layout_below="@+id/tv2"
            android:layout_marginTop="19dp"
            android:layout_toLeftOf="@+id/re_reg"
            android:layout_toStartOf="@+id/re_reg"
            android:background="@drawable/shape"
            android:ems="10"
            android:hint="@string/YZM"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/re_yzm"
            android:layout_alignRight="@+id/re_yzm"
            android:layout_alignStart="@+id/re_yzm"
            android:layout_below="@+id/re_yzm"
            android:layout_marginTop="12dp"
            android:background="@drawable/textview_unfocused" />

        <Button
            android:id="@+id/re_bt"
            android:layout_width="163dp"
            android:layout_height="37dp"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="@dimen/dp33"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_select"
            android:text="@string/register"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/re_getyzm"
            android:layout_width="83dp"
            android:layout_height="37dp"
            android:layout_above="@+id/re_bt"
            android:layout_alignEnd="@+id/tv2"
            android:layout_alignRight="@+id/tv2"
            android:background="@drawable/shape_select"
            android:text="@string/getYZM"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>
