<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.wqj.com.login.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/Login_editText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp20"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignEnd="@+id/editText2"
            android:layout_alignLeft="@+id/login"
            android:layout_alignRight="@+id/editText2"
            android:layout_alignStart="@+id/login"
            android:layout_marginLeft="@dimen/dp10"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:hint="@string/count"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/log_account"
            android:layout_width="@dimen/dp230"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/Login_editText"
            android:layout_marginStart="@dimen/dp12"
            android:layout_marginTop="6dp"
            android:background="@drawable/textview_unfocused" />

        <ImageView
            android:layout_marginStart="@dimen/dp12"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginTop="46dp"
            android:src="@drawable/login_username"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp12"
            android:layout_below="@+id/log_account"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/login_password"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/log_password"
            android:layout_width="230dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageView2"
            android:layout_marginStart="@dimen/dp12"
            android:layout_marginTop="6dp"
            android:background="@drawable/textview_unfocused" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/log_password"
            android:layout_alignEnd="@+id/log_password"
            android:layout_alignRight="@+id/log_password"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edittext_shape"
            app:srcCompat="@drawable/login_view"
            tools:ignore="ContentDescription" />


        <Button

            android:id="@+id/re_register"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignBottom="@id/login"
            android:layout_alignEnd="@+id/Login_editText"
            android:layout_alignRight="@+id/Login_editText"
            android:layout_alignTop="@+id/login"
            android:background="@drawable/selector"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="19sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:background="@drawable/shape_select"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_above="@+id/log_password"
            android:layout_alignBottom="@id/imageView2"
            android:layout_alignLeft="@+id/login"
            android:layout_alignStart="@+id/login"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/imageButton"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/log_bt"
            android:layout_width="163dp"
            android:layout_height="37dp"
            android:layout_alignLeft="@id/login"
            android:layout_below="@+id/log_password"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_select"
            android:text="@string/login"
            android:textColor="#ffffff" />
    </RelativeLayout>

</RelativeLayout>
