<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.wqj.com.login.activity.TimeSet">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:background="#97C8CD" />

    <RelativeLayout

        android:id="@+id/re2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp20"
        android:background="#97C8CD">

        <ImageButton
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:background="#99C8CC"
            android:src="@drawable/kczx_re1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/schooltime"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <ImageButton
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginEnd="15dp"
            android:background="#99C8CC"
            android:src="@drawable/save" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/white"
            android:orientation="vertical">

            <test.wqj.com.login.utils.MyGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:horizontalSpacing="3dp"
                android:numColumns="8"
                android:padding="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="3dp">

            </test.wqj.com.login.utils.MyGridView>

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gridview"
                android:background="@android:color/white">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/free" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp20"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="92dp"
                    android:text="@string/acceptschool"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="190dp"
                    android:src="@drawable/busy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp20"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="233dp"
                    android:text="@string/reject"
                    android:textColor="@android:color/black" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
